@@ -1,3 +1,10 @@
+2007-04-21  Alp Toker  <alp@atoker.com>
+
+        Gdk build fix.
+
+        * platform/gdk/FontPlatformDataGdk.cpp:
+        (WebCore::FontPlatformData::FontPlatformData): Use the correct casts.
+
 2007-04-20  Brady Eidson  <beidson@apple.com>
 
         Reviewed by Oliver (Black Sheep)
